<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="map"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_map"
        android:shortcutLongLabel="@string/shortcut_map_long"
        android:icon="@mipmap/ic_launcher">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://trout.chrisizworski.com/map.html" />
    </shortcut>
    <shortcut
        android:shortcutId="top10"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_top10"
        android:shortcutLongLabel="@string/shortcut_top10_long"
        android:icon="@mipmap/ic_launcher">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://trout.chrisizworski.com/top-rivers.html" />
    </shortcut>
    <shortcut
        android:shortcutId="hex"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_hex"
        android:shortcutLongLabel="@string/shortcut_hex_long"
        android:icon="@mipmap/ic_launcher">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://trout.chrisizworski.com/hex.html" />
    </shortcut>
</shortcuts>
